# stock_prediction_model

./: .gitignore  ENV_EXAMPLE.txt  README.md  pyproject.toml  requirements.txt  streamlit_app.py
apps/: analysis_app.py  app.py
docs/: Stock_Predictor_Framework_Guide.docx
scripts/: generate_eli5_doc.py  generate_google_doc.py  generate_pdf_guide.py
src/stock_predictor/: __init__.py  cli.py  config.py  utils.py
src/stock_predictor/backtest/: backtest.py
src/stock_predictor/features/: engineering.py
src/stock_predictor/live/: broker_alpaca.py  broker_kite.py  pipeline.py  settings.py
src/stock_predictor/portfolio/: rebalance.py
src/stock_predictor/scan/: market_scan.py
universe/: sample_nifty.csv
