[project]
name = "stock-predictor"
version = "0.1.0"
description = "End-to-end stock prediction project: ingestion, features, modeling, backtesting, CLI, and Streamlit app."
authors = [{ name = "Abhishek" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]